--- a/organixx/package.json
+++ b/organixx/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.13",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
